--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>DataStructures</groupId>
+    <artifactId>DataStructures</artifactId>
+    <version>1.0-SNAPSHOT</version>
+
     <build>
     <plugins>
         <plugin>
@@ -17,9 +21,16 @@
     </plugins>
 </build>
 
-    <groupId>DataStructures</groupId>
-    <artifactId>DataStructures</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
+
 
 
 </project>
